--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,31 @@ endif()
 
 project(GatoBot VERSION 1.4.0)
 
+#set(GEODE_LINK_NIGHTLY On)
 file(GLOB_RECURSE SOURCES
 	src/*.cpp
 )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
-target_include_directories(GatoBot PUBLIC src)
+target_include_directories(${PROJECT_NAME} PUBLIC 
+    src
+    external/ffmpeg/src
+)
 
+# link ffmpeg
+# https://github.com/getsentry/sentry-native/issues/173
+set(CMAKE_CXX_FLAGS           "${CMAKE_CXX_FLAGS} /D \"SAFESEH:NO\"")
+set(CMAKE_EXE_LINKER_FLAGS    "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
+set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /SAFESEH:NO")
+
+file(GLOB FFMPEG_LIBS
+  external/ffmpeg/bin/win32/avcodec.lib
+  external/ffmpeg/bin/win32/avutil.lib
+)
+
+
+# set up geode
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
 else()
@@ -27,5 +45,7 @@ else()
 endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
+
+target_link_libraries(${PROJECT_NAME} ${FFMPEG_LIBS})
 
 setup_geode_mod(${PROJECT_NAME})
